master: add font sizse

--- a/DCLoadDCOpenData.html
+++ b/DCLoadDCOpenData.html
@@ -27,7 +27,8 @@
     #mapDiv {
         height: 100%;
         width: 100%;
-        font-family: "open_sanssemi", sans-serif;            
+        font-family: "open_sanssemi", sans-serif;
+        font-size:9px;
     }
     
     @media (max-width: 600px) {
