--- a/DCATMBanking.html
+++ b/DCATMBanking.html
@@ -29,6 +29,7 @@
         padding: 0;
         font-family: "open_sanssemi", sans-serif;
         background:yellow;
+		font-size:20px;
     }
     
     #map {
