--- a/DCATMBanking.html
+++ b/DCATMBanking.html
@@ -27,7 +27,8 @@
         width: 100%;
         margin: 0;
         padding: 0;
-        font-family: "open_sanssemi", sans-serif;        
+        font-family: "open_sanssemi", sans-serif;  
+        font-color:green;
     }
     
     #map {
